@@ -1,5 +1,6 @@
 MJ 28/08/05
 - Fixed a bug in Scheduler: now all times are realy long
+- Also longified the Transport interface
 
 MJ 21/08/05
 - some minor documentation fixes
